# harponic

./: .gitignore  mypy.ini  pyproject.toml  qodana.yaml
core/domain/entities/: hymn.py
core/domain/value_objects/: lyrics.py  verse.py
tests/core/domain/entities/: test_hymn.py  test_lyrics.py
